padding bottom gap fix

--- a/src/components/sampler.css
+++ b/src/components/sampler.css
@@ -6,13 +6,7 @@
   justify-content: center;
   flex-shrink: 0;
   width: 100%;
-}
-
-.sampler-container::after {
-  content: "";
-  display: block;
-  /* display: inline-block; */
-  padding-bottom: 100%;
+  padding-bottom: 50px;
 }
 
 .sampler-tabs {
