--- a/src/components/transport.css
+++ b/src/components/transport.css
@@ -2,9 +2,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 800px;
-  min-width: 800px;
-  max-width: 100%;
+  width: 100%;
   margin: 20px 0;
 }
 
